--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "node app.js"
   },
-  "dependencies": {
+"dependencies": {
     "discord.js": "^14.11.0",
     "express": "^4.18.2",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "axios": "^1.7.2"  // Or whatever version gets installed
   }
 }
